server/resources/etc/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Fri Feb 24 16:57:45 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:124]
-A INPUT -i lo -j ACCEPT
-A FORWARD -i enp3s0 -o eno1 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -i enp3s0 -o eno1 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -i enp3s0 -o eno1 -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -i enp3s0 -o eno1 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -i enp3s0 -o enp1s0 -j ACCEPT
-A FORWARD -i enp1s0 -o enp3s0 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Fri Feb 24 16:57:45 2023
# Generated by iptables-save v1.8.7 on Fri Feb 24 16:57:45 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 42.42.42.0/24 -j MASQUERADE
COMMIT
# Completed on Fri Feb 24 16:57:45 2023
